// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VListItemAction.ts should render component and match snapshot 1`] = `
<div class="v-list-item__action">
</div>
`;

exports[`VListItemAction.ts should render component with many children and match snapshot 1`] = `
<div class="v-list-item__action v-list-item__action--stack">
  <div>
    content1
  </div>
  <span>
    content2
  </span>
</div>
`;

exports[`VListItemAction.ts should render component with one children and match snapshot 1`] = `
<div class="v-list-item__action v-list-item__action--stack">
  <div>
    visible
  </div>
  <span>
    notVisible
  </span>
</div>
`;

exports[`VListItemAction.ts should render component with static class and match snapshot 1`] = `
<div class="v-list-item__action static-class static-class">
</div>
`;

exports[`VListItemAction.ts should work with v-html 1`] = `
<div class="v-list-item__action">
  <div>
    <b>
      something
    </b>
  </div>
</div>
`;
